add more files to be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,36 @@
 *.swp
 .gitignore
 config_server_by_zk
+zk-3.4.6/.deps/
+zk-3.4.6/.libs/
+zk-3.4.6/config.h
+zk-3.4.6/bin/
+zk-3.4.6/cli_mt
+zk-3.4.6/cli_st
+zk-3.4.6/hashtable.lo
+zk-3.4.6/hashtable_itr.lo
+zk-3.4.6/libhashtable.la
+zk-3.4.6/libzkmt.la
+zk-3.4.6/libzkmt_la-mt_adaptor.lo
+zk-3.4.6/libzkmt_la-recordio.lo
+zk-3.4.6/libzkmt_la-zk_hashtable.lo
+zk-3.4.6/libzkmt_la-zk_log.lo
+zk-3.4.6/libzkmt_la-zookeeper.jute.lo
+zk-3.4.6/libzkmt_la-zookeeper.lo
+zk-3.4.6/libzkst.la
+zk-3.4.6/libzookeeper_mt.la
+zk-3.4.6/libzookeeper_st.la
+zk-3.4.6/load_gen
+zk-3.4.6/recordio.lo
+zk-3.4.6/st_adaptor.lo
+zk-3.4.6/zk_hashtable.lo
+zk-3.4.6/zk_log.lo
+zk-3.4.6/zookeeper.jute.lo
+zk-3.4.6/zookeeper.lo
+zk-3.4.6/config.log
+zk-3.4.6/config.status
+zk-3.4.6/lib/libzookeeper_mt.la
+zk-3.4.6/lib/libzookeeper_mt.so.2.0.0
+zk-3.4.6/lib/libzookeeper_st.la
+zk-3.4.6/lib/libzookeeper_st.so.2.0.0
+zk-3.4.6/libtool
